        * mogstored: pidfile support

        * New FSCK work and error for BCNT for bad devcount values (they would
          not otherwise be caught unless the triggered another fix).

2009-01-12: Release version 2.30

        * fsck will now fix broken 'devcount' cols.

        * schema version bump to 12, and new delete worker code to use the new
          queue system. delete should be faster and more scalable.

        * add server setting queue_rate_for_fsck to allow rate limiting how
          fast the new distributed fsck creates jobs. the original default of
          10k could utterly defeat wimpy databases.

        * Support 0 byte files.

        * Fix a bug where rebalance would accidentally delete copies of a fid.

        * Create new internal queue management system, with new job
          'JobMaster'. This greatly reduces database load and increases
          throughput for workers using the new system.

        * Add 'no_unreachable_tracking' config. Disables more of the old
          replication code. Use this if you have no 1.x trackers.

        * Add hook for alternate replication sources. Obscure, but can be
          nice.

        * Add replicate_order_final_choices hook, so multidc replication may
          pull from the local network if one copy already exists.

        * Fix subtle bugs in process management.

        * Allow overriding of default classes.

2008-08-18: Release version 2.20

        * One more time, and hopefully never again. No changes. META.yml
          fixes.

2008-08-18: Release version 2.19

        * No changes except for META.yml fixes.
          _should_ be able to upload releases without owning half of CPAN.

2008-08-16: Release version 2.18

        * Add repl_use_get_port option (Brian Lynch)

        * Remove tempfile data and rows on create_close (Chaos Wang)

        * Don't delete files accidentally during tempfile table cleanup

        * Specify username to run the mogstored daemon (Jonathan Share)
